# FlipperZeroEsp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flash.ps1  flash.sh  ft232h.cfg  partitions.csv
components/applications/: CMakeLists.txt  applications.h
components/applications/services/cli/: cli.c  cli_command_gpio.c  cli_commands.c  cli_i.h  cli_vcp.c  cli_vcp.h
components/applications/services/desktop/: desktop.c
components/applications/services/desktop/animations/: animation_manager.c
components/applications/services/desktop/scenes/: desktop_scene_pin_timeout.c  desktop_scene_slideshow.c
components/applications/services/desktop/views/: desktop_view_debug.c  desktop_view_locked.c  desktop_view_pin_timeout.c
components/applications/services/dialogs/: dialogs.c
components/applications/services/dolphin/: dolphin.c
components/applications/services/gui/: canvas.c  canvas_i.h  gui.c  icon_animation.c  view_port.c
components/applications/services/loader/: loader.c  loader_cli.c  loader_menu.c
components/applications/services/notification/: notification_app.c
components/applications/services/storage/: storage.c  storage_cli.c  storage_external_api.c  storage_processing.c
components/applications/services/storage/storages/: storage_ext.c  storage_ext.h  storage_int.c
components/toolbox/: CMakeLists.txt
components/toolbox/toolbox/: compress.c  profiler.c  version.c
components/toolbox/toolbox/protocols/: protocol.h
components/toolbox/toolbox/stream/: buffered_file_stream.c
docs/: development.md  jtag-debugging.md  (+1 more)
(+81 files in other folders)
